--- a/github portfolio/portfolio/portfolio.html
+++ b/github portfolio/portfolio/portfolio.html
@@ -98,7 +98,7 @@
       <div class="text-center mt-4">
         <a
           class="btn btn-xl btn-outline-light"
-          href="https://drive.google.com/file/d/1l4htEN90nS_WIg2ulDyOpyxT1e4KtZ99/view?usp=share_link"
+          href="https://drive.google.com/file/d/1iCu7a_nhUMXzcn-YtTU1C-4FR11DwU3Q/view?usp=drivesdk"
         >
           <i class="fas fa-download me-2"></i>
           Resume
